--- a/checkpoint/CH3.Rmd
+++ b/checkpoint/CH3.Rmd
@@ -558,6 +558,17 @@ Our demographic and socioeconomic data are drawn from the American Community Sur
 > Lastly, we acquired subway ridership from Metropolitan Transportation Authority’s turnstile data for the week of September 7, 2019. For each station, entry/exit of each turnstile is recorded. Then, we aggregated this information by taking the station-specific average of subway ridership across the 7 days in the week. Finally, we geotagged each listed station, then took the mean of ridership at all subway stations in each neighborhood.
 
 
+## Data Summaries
+
+```{r eval = FALSE}
+dim(nyc_clean)
+names(nyc_clean)
+head(nyc_clean)
+summary(nyc_clean)
+```
+
+
+
 ## Data Visuals
 
 
